--- a/MFTReader.vcxproj.filters
+++ b/MFTReader.vcxproj.filters
@@ -41,5 +41,8 @@
     <ClInclude Include="Utils.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\common\include\string_utils.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
